# MLOps_99

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  Untitled.java  data-to-csv.py  data.dvc  environment.yaml  labels.csv  pyproject.toml  report.html  requirements.txt  requirements_dev.txt  setup.py  tasks.py  trainonline.py
.dvc/: config
.github/workflows/: codecheck.yaml  dependabot.yaml  docker-build.yaml  docker-build.yml  pre_commit.yaml  tests.yaml
datadrift/: data_drift.py
dockerfiles/: Dockerfile  api.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
lightning_logs/version_0/: events.out.tfevents.1737298091.william-zenbookum5401qab.35075.0
lightning_logs/version_1/: events.out.tfevents.1737298406.william-zenbookum5401qab.37267.0
lightning_logs/version_10/: events.out.tfevents.1737300176.william-zenbookum5401qab.46838.0
lightning_logs/version_11/: events.out.tfevents.1737300651.william-zenbookum5401qab.48427.0
lightning_logs/version_12/: events.out.tfevents.1737300689.william-zenbookum5401qab.49174.0  events.out.tfevents.1737300977.william-zenbookum5401qab.49174.1
lightning_logs/version_13/: events.out.tfevents.1737362968.william-zenbookum5401qab.65074.0
lightning_logs/version_14/: events.out.tfevents.1737364112.william-zenbookum5401qab.68574.0
notebooks/: sea-animals-pytorch-lightning-cnn.ipynb  test.ipynb
reports/: README.md  report.py
tests/: test_data.py  test_model.py
vertex_package/: requirements.txt  train.py
wandb/: latest-run  latest-run~HEAD
workflows/: docker-build.yml
(+418 files in other folders)
